--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html {
   scroll-snap-type: y mandatory;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #000;
 }
 
@@ -38,7 +38,7 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  z-index: 1;
+  z-index: 1000;
 }
 
 .top-navbar h2 {
@@ -55,7 +55,7 @@ html {
 }
 
 .top-navbar h2 span::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: -2px;
@@ -64,7 +64,6 @@ html {
   background-color: #fff;
   transform: translateX(50%);
 }
-
 
 .top-navbar .icon {
   font-size: 16px;
@@ -95,7 +94,7 @@ html {
   color: #d4d3d3;
 }
 
-.bottom-navbar .plus{
+.bottom-navbar .plus {
   background-color: #fff;
   color: #161616;
   padding: 5px 10px;
